--- a/R/Dat_transform.Rmd
+++ b/R/Dat_transform.Rmd
@@ -37,6 +37,13 @@ y
 (y <- seq(1, 10, length.out = 5))
 ```
 
+- Press Alt + Shift + K. What happens? How can you get to the same place using the menus?
+- This gives a menu with keyboard shortcuts. This can be found in the menu under `Tools -> Keyboard Shortcuts Help`.
+
+```{r message = FALSE, warning =  FALSE}
+library(nycflights13)
+library(tidyverse)
+```
 
 
 
